[package]
name = "lvgl_rust_sys"
version = "0.1.0"
edition = "2021"

[features]
default = ["use-string-functions"]
drivers = []
rust_timer = []
use-vendored-config = []
use-string-functions = []

color_depth_1 = []
color_depth_8 = []
color_depth_16 = []
color_depth_24 = []
color_depth_32 = []

[dependencies]


[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.18"
